// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBeacon is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-success"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props color accent is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-accent"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props color danger is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-danger"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props color primary is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-primary"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props color subdued is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-subdued"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props color success is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-success"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props color warning is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-warning"
  data-test-subj="test subject string"
  style="height:12px;width:12px"
/>
`;

exports[`EuiBeacon props size accepts size 1`] = `
<div
  aria-label="aria-label"
  class="euiBeacon testClass1 testClass2 emotion-euiBeacon-success"
  data-test-subj="test subject string"
  style="height:14px;width:14px"
/>
`;
